--- a/src/index.html
+++ b/src/index.html
@@ -12,13 +12,17 @@
 </head>
 
 <body>
-    <h1 class="hello">Hello World! :)</h1>
-    <h3>see console</h3>
-    <img src="img/1_dL6ZMFxUBGqD70cmAkSqRA.jpeg" alt="" srcset="">
-    <img src="img/bg.jpg" alt="" srcset="">
-    <img src="img/cloud.svg" alt="" srcset="">
-    <img src="img/google.png" alt="" srcset="">
-    <img src="img/simons-cat.gif" alt="" srcset="">
+    <div class="container">
+        <nav class="nav">
+            <a class="nav-link active" href="#">Active</a>
+            <a class="nav-link" href="#">Link</a>
+            <a class="nav-link" href="#">Link</a>
+            <a class="nav-link" href="#">Link</a>
+            <a class="nav-link" href="#">Link</a>
+            <a class="nav-link disabled" href="#">Disabled</a>
+          </nav>
+    </div>
+   
 </body>
 
 </html>
