feat: add img, add cards, flex

--- a/src/index.html
+++ b/src/index.html
@@ -4,25 +4,86 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1">
-    <meta name="description" content="Canvas" />
-    <meta name="author" lang="en" content="Alexander Panov" />
     <title>Hello !</title>
     <link rel="stylesheet" href="style.css" />
 
 </head>
 
-<body>
-    <div class="container">
-        <nav class="nav">
-            <a class="nav-link active" href="#">Active</a>
-            <a class="nav-link" href="#">Link</a>
-            <a class="nav-link" href="#">Link</a>
-            <a class="nav-link" href="#">Link</a>
-            <a class="nav-link" href="#">Link</a>
-            <a class="nav-link disabled" href="#">Disabled</a>
-          </nav>
+<body>  
+
+  
+  <div class="container">
+    <div class="row">
+      <div class="col">
+        <div class="card mx-auto" style="width: 18rem;">
+          <img src="../src/img/dance.jpg" class="card-img-top" alt="">
+          <div class="card-body">
+            <p class="card-text">Some quick content.</p>
+          </div>
+        </div>
+      </div>
+      <div class="col">  
+        <div class="card mx-auto" style="width: 18rem;">
+          <img src="../src/img/swim.jpg" class="card-img-top" alt="">
+          <div class="card-body">
+            <p class="card-text">Some quick content.</p>
+          </div>
+        </div>
+      </div>
+      <div class="col"> 
+        <div class="card mx-auto" style="width: 18rem;">
+          <img src="../src/img/dogEndKids.jpg" class="card-img-top" alt="">
+          <div class="card-body">
+            <p class="card-text">Some quick content.</p>
+          </div>
+        </div>
+      </div>        
     </div>
-   
+    <div class="row">
+      <div class="col"> 
+        <div class="card mx-auto" style="width: 18rem;">
+          <img src="../src/img/action.jpg" class="card-img-top" alt="">
+          <div class="card-body">
+            <p class="card-text">Some quick content.</p>
+          </div>
+        </div>
+      </div>      
+      <div class="col">
+        <div class="card mx-auto" style="width: 18rem;">
+          <img src="../src/img/cat.jpg" class="card-img-top" alt="">
+          <div class="card-body">
+            <p class="card-text">Some quick content.</p>
+          </div>
+        </div>
+      </div>
+      <div class="col">
+        <div class="card mx-auto" style="width: 18rem;">
+          <img src="../src/img/bird.jpg" class="card-img-top" alt="">
+          <div class="card-body">
+            <p class="card-text">Some quick content.</p>
+          </div>
+        </div>
+      </div>
+    </div> 
+    <div class="row">
+      <div class="col">
+        <div class="card mx-auto" style="width: 18rem;">
+          <img src="../src/img/blouse.jpg" class="card-img-top" alt="">
+          <div class="card-body">
+            <p class="card-text">Some quick content.</p>
+          </div>
+        </div>
+      </div>
+      <div class="col">
+        <div class="card mx-auto" style="width: 18rem;">
+          <img src="../src/img/smile.jpg" class="card-img-top" alt="">
+          <div class="card-body">
+            <p class="card-text">Some quick content.</p>
+          </div>
+        </div>
+      </div>
+    </div>  
+  </div>   
 </body>
 
 </html>
