--- a/src/index.html
+++ b/src/index.html
@@ -46,66 +46,146 @@
     <div class="container">
       <div class="row justify-content-between"> 
         <div class="col-lg-auto col-md-auto my-5 p-0">
-          <div class="card mx-md-auto border-0" style="width: 30rem; height: 28;">
-            <img src="../src/img/dance.jpg" class="card-img-top" alt="">
-            <div class="card-body">
-              <p class="card-text h1">Action (set A)</p>
+          <div class="card card_set mx-md-auto border-0" href="#">
+            <div class="front">
+              <img src="../src/img/dance.jpg" class="card-img-top" alt="">
+              <div class="card-body">
+                <p class="card-text h1">Action (set A)</p>
+                <div class="rotate"></div>
+              </div>
+            </div>
+            <div class="back">
+              <img src="../src/img/dance.jpg" class="card-img-top" alt="">
+              <div class="card-body">
+                <p class="card-text h1">Action (555 A)</p>
+                <div class="rotate"></div>
+              </div>
             </div>
           </div>
         </div>
         <div class="col-lg-auto col-md-auto my-5 p-0">  
-          <div class="card mx-md-auto border-0" style="width: 30rem; height: 28;">
-            <img src="../src/img/swim.jpg" class="card-img-top" alt="">
-            <div class="card-body">
-              <p class="card-text h1">Action (set B)</p>
+          <div class="card card_set mx-md-auto border-0" href="#">
+            <div class="front">
+              <img src="../src/img/swim.jpg" class="card-img-top" alt="">
+              <div class="card-body">
+                <p class="card-text h1">Action (set B)</p>
+                <div class="rotate"></div>
+              </div>
+            </div>
+            <div class="back">
+              <img src="../src/img/swim.jpg" class="card-img-top" alt="">
+              <div class="card-body">
+                <p class="card-text h1">Action (444 B)</p>
+                <div class="rotate"></div>
+              </div>
             </div>
           </div>
         </div>
         <div class="col-lg-auto col-md-auto my-5 p-0"> 
-          <div class="card mx-md-auto border-0" style="width: 30rem; height: 28;">
-            <img src="../src/img/dogEndKids.jpg" class="card-img-top" alt="">
-            <div class="card-body">
-              <p class="card-text h1">Action (set C)</p>
+          <div class="card card_set mx-md-auto border-0" href="#">
+            <div class="front">
+              <img src="../src/img/dogEndKids.jpg" class="card-img-top" alt="">
+              <div class="card-body">
+                <p class="card-text h1">Action (set C)</p>
+                <div class="rotate"></div>
+              </div>
+            </div>
+            <div class="back">
+              <img src="../src/img/dogEndKids.jpg" class="card-img-top" alt="">
+              <div class="card-body">
+                <p class="card-text h1">Action (333 C)</p>
+                <div class="rotate"></div>
+              </div>
             </div>
           </div>
         </div>        
         <div class="col-lg-auto col-md-auto my-5 p-0"> 
-          <div class="card mx-md-auto border-0" style="width: 30rem; height: 28;">
-            <img src="../src/img/action.jpg" class="card-img-top" alt="">
-            <div class="card-body">
-              <p class="card-text h1">Adjective</p>
-            </div>
+          <div class="card card_set mx-md-auto border-0" href="#">
+            <div class="front">
+              <img src="../src/img/action.jpg" class="card-img-top" alt="">
+              <div class="card-body">
+                <p class="card-text h1">Adjective</p>
+                <div class="rotate"></div>
+              </div>
+            </div> 
+            <div class="back">
+              <img src="../src/img/action.jpg" class="card-img-top" alt="">
+              <div class="card-body">
+                <p class="card-text h1">Adjec666</p>
+                <div class="rotate"></div>
+              </div>
+            </div> 
           </div>
         </div>      
         <div class="col-lg-auto col-md-auto my-5 p-0">
-          <div class="card mx-md-auto border-0" style="width: 30rem; height: 28;">
-            <img src="../src/img/cat.jpg" class="card-img-top" alt="">
-            <div class="card-body">
-              <p class="card-text h1">Animal (set A)</p>
-            </div>
+          <div class="card card_set mx-md-auto border-0" href="#">
+            <div class="front">
+              <img src="../src/img/cat.jpg" class="card-img-top" alt="">
+              <div class="card-body">
+                <p class="card-text h1">Animal (set A)</p>
+                <div class="rotate"></div>
+              </div>
+            </div> 
+            <div class="back">
+              <img src="../src/img/cat.jpg" class="card-img-top" alt="">
+              <div class="card-body">
+                <p class="card-text h1">Animal (788 A)</p>
+                <div class="rotate"></div>
+              </div>
+            </div> 
           </div>
         </div>
         <div class="col-lg-auto col-md-auto my-5 p-0">
-          <div class="card mx-md-auto border-0" style="width: 30rem; height: 28;">
-            <img src="../src/img/bird.jpg" class="card-img-top" alt="">
-            <div class="card-body">
-              <p class="card-text h1">Animal (set B)</p>
+          <div class="card card_set mx-md-auto border-0" href="#">
+            <div class="front">
+              <img src="../src/img/bird.jpg" class="card-img-top" alt="">
+              <div class="card-body">
+                <p class="card-text h1">Animal (set B)</p>
+                <div class="rotate"></div>
+              </div>
+            </div>
+            <div class="back">
+              <img src="../src/img/bird.jpg" class="card-img-top" alt="">
+              <div class="card-body">
+                <p class="card-text h1">Animal (999 B)</p>
+                <div class="rotate"></div>
+              </div>
             </div>
           </div>
         </div>
         <div class="col-lg col-md-auto my-5 p-0">
-          <div class="card mx-md-auto mx-lg-auto border-0" style="width: 30rem; height: 28;">
-            <img src="../src/img/blouse.jpg" class="card-img-top" alt="">
-            <div class="card-body">
-              <p class="card-text h1">Clothes</p>
+          <div class="card card_set mx-md-auto mx-lg-auto border-0" href="#">
+            <div class="front">
+              <img src="../src/img/blouse.jpg" class="card-img-top" alt="">
+              <div class="card-body">
+                <p class="card-text h1">Clothes</p>
+                <div class="rotate"></div>
+              </div>
+            </div>
+            <div class="back">
+              <img src="../src/img/blouse.jpg" class="card-img-top" alt="">
+              <div class="card-body">
+                <p class="card-text h1">Clo000</p>
+                <div class="rotate"></div>
+              </div>
             </div>
           </div>
         </div>
         <div class="col-lg col-md-auto my-5 p-0">
-          <div class="card mx-md-auto mx-lg-auto border-0" style="width: 30rem; height: 28;">
-            <img src="../src/img/smile.jpg" class="card-img-top" alt="">
-            <div class="card-body">
-              <p class="card-text h1">Emotion</p>
+          <div class="card card_set mx-md-auto mx-lg-auto border-0" href="#">
+            <div class="front">
+              <img src="../src/img/smile.jpg" class="card-img-top" alt="">
+              <div class="card-body">
+                <p class="card-text h1">Emotion</p>
+                <div class="rotate"></div>
+              </div>
+            </div>
+            <div class="back">
+              <img src="../src/img/smile.jpg" class="card-img-top" alt="">
+              <div class="card-body">
+                <p class="card-text h1">Emot111</p>
+                <div class="rotate"></div>
+              </div>
             </div>
           </div> 
         </div>
