--- a/src/indexFirst.html
+++ b/src/indexFirst.html
@@ -46,68 +46,68 @@
     <div class="container">
       <div class="row justify-content-between"> 
         <div class="col-lg-auto col-md-auto my-5 p-0">
-          <div class="card mx-md-auto border-0" style="width: 30rem; height: 28;">
+          <a class="card mx-md-auto border-0" href="#">
             <img src="../src/img/dance.jpg" class="card-img-top" alt="">
             <div class="card-body">
               <p class="card-text h1">Action (set A)</p>
             </div>
-          </div>
+          </a>
         </div>
         <div class="col-lg-auto col-md-auto my-5 p-0">  
-          <div class="card mx-md-auto border-0" style="width: 30rem; height: 28;">
+          <a class="card mx-md-auto border-0" href="#">
             <img src="../src/img/swim.jpg" class="card-img-top" alt="">
             <div class="card-body">
               <p class="card-text h1">Action (set B)</p>
             </div>
-          </div>
+          </a>
         </div>
         <div class="col-lg-auto col-md-auto my-5 p-0"> 
-          <div class="card mx-md-auto border-0" style="width: 30rem; height: 28;">
+          <a class="card mx-md-auto border-0" href="#">
             <img src="../src/img/dogEndKids.jpg" class="card-img-top" alt="">
             <div class="card-body">
               <p class="card-text h1">Action (set C)</p>
             </div>
-          </div>
+          </a>
         </div>        
         <div class="col-lg-auto col-md-auto my-5 p-0"> 
-          <div class="card mx-md-auto border-0" style="width: 30rem; height: 28;">
+          <a class="card mx-md-auto border-0" href="#">
             <img src="../src/img/action.jpg" class="card-img-top" alt="">
             <div class="card-body">
               <p class="card-text h1">Adjective</p>
             </div>
-          </div>
+          </a>
         </div>      
         <div class="col-lg-auto col-md-auto my-5 p-0">
-          <div class="card mx-md-auto border-0" style="width: 30rem; height: 28;">
+          <a class="card mx-md-auto border-0" href="#">
             <img src="../src/img/cat.jpg" class="card-img-top" alt="">
             <div class="card-body">
               <p class="card-text h1">Animal (set A)</p>
             </div>
-          </div>
+          </a>
         </div>
         <div class="col-lg-auto col-md-auto my-5 p-0">
-          <div class="card mx-md-auto border-0" style="width: 30rem; height: 28;">
+          <a class="card mx-md-auto border-0" href="#">
             <img src="../src/img/bird.jpg" class="card-img-top" alt="">
             <div class="card-body">
               <p class="card-text h1">Animal (set B)</p>
             </div>
-          </div>
+          </a>
         </div>
         <div class="col-lg col-md-auto my-5 p-0">
-          <div class="card mx-md-auto mx-lg-auto border-0" style="width: 30rem; height: 28;">
+          <a class="card mx-md-auto mx-lg-auto border-0" href="#">
             <img src="../src/img/blouse.jpg" class="card-img-top" alt="">
             <div class="card-body">
               <p class="card-text h1">Clothes</p>
             </div>
-          </div>
+          </a>
         </div>
         <div class="col-lg col-md-auto my-5 p-0">
-          <div class="card mx-md-auto mx-lg-auto border-0" style="width: 30rem; height: 28;">
+          <a class="card mx-md-auto mx-lg-auto border-0" href="#">
             <img src="../src/img/smile.jpg" class="card-img-top" alt="">
             <div class="card-body">
               <p class="card-text h1">Emotion</p>
             </div>
-          </div> 
+          </a> 
         </div>
       </div>
     </div>   
