--- a/src/index.html
+++ b/src/index.html
@@ -190,7 +190,12 @@
           </div> 
         </div>
       </div>
-    </div>   
+    </div> 
+    <div class="container">      
+      <button type="button" class="btn btn-warning btn-lg btn-block">Start game</button>
+
+      </div>
+    </div>  
   </div>  
 </body>
 
