feat: add class Card

--- a/src/index.html
+++ b/src/index.html
@@ -11,22 +11,19 @@
 
 <body> 
 
- 
-
-
   <header class="header">
     <!-- <div class="container">  -->
       <!-- <div class="navbar p-0 mx-auto"> -->
-        <div class="container">
+        <div class="container nav-container">
           <nav class="nav-panel">
-            <a class="nav-link active" href="#">Main Page</a>
-            <a class="nav-link" href="#">Action (set A)</a>
-            <a class="nav-link" href="#">Action (set B)</a>
-            <a class="nav-link" href="#">Adjective</a>
-            <a class="nav-link" href="#">Animal (set A)</a>
-            <a class="nav-link" href="#">Animal (set B)</a>
-            <a class="nav-link" href="#">Clothes</a>
-            <a class="nav-link disabled" href="#">Emotions</a>
+            <a class="nav-link active" href="index.html">Main Page</a>
+            <a class="nav-link" href="index2.html" onclick="localStorage.pageName = 1">Action (set A)</a>
+            <a class="nav-link" href="index2.html" onclick="localStorage.pageName = 2">Action (set B)</a>
+            <a class="nav-link" href="index2.html" onclick="localStorage.pageName = 3">Adjective</a>
+            <a class="nav-link" href="index2.html" onclick="localStorage.pageName = 4">Animal (set A)</a>
+            <a class="nav-link" href="index2.html" onclick="localStorage.pageName = 5">Animal (set B)</a>
+            <a class="nav-link" href="index2.html" onclick="localStorage.pageName = 6">Clothes</a>
+            <a class="nav-link disabled" href="index2.html" onclick="localStorage.pageName = 7">Emotions</a>
           </nav>  
           <div class="row justify-content-between">
             <div class="col-auto p-0 align-self-center">        
@@ -56,7 +53,7 @@
     <div class="container">
       <div class="row justify-content-between"> 
         <div class="col-lg-auto col-md-auto my-5 p-0">
-          <a class="card mx-md-auto border-0" href="#">
+          <a class="card mx-md-auto border-0" href="index2.html">
             <img src="../src/img/dance.jpg" class="card-img-top" alt="">
             <div class="card-body">
               <p class="card-text h1">Action (set A)</p>
@@ -64,7 +61,7 @@
           </a>
         </div>
         <div class="col-lg-auto col-md-auto my-5 p-0">  
-          <a class="card mx-md-auto border-0" href="#">
+          <a class="card mx-md-auto border-0" href="index2.html">
             <img src="../src/img/swim.jpg" class="card-img-top" alt="">
             <div class="card-body">
               <p class="card-text h1">Action (set B)</p>
@@ -72,7 +69,7 @@
           </a>
         </div>
         <div class="col-lg-auto col-md-auto my-5 p-0"> 
-          <a class="card mx-md-auto border-0" href="#">
+          <a class="card mx-md-auto border-0" href="index2.html">
             <img src="../src/img/dogEndKids.jpg" class="card-img-top" alt="">
             <div class="card-body">
               <p class="card-text h1">Action (set C)</p>
@@ -80,7 +77,7 @@
           </a>
         </div>        
         <div class="col-lg-auto col-md-auto my-5 p-0"> 
-          <a class="card mx-md-auto border-0" href="#">
+          <a class="card mx-md-auto border-0" href="index2.html">
             <img src="../src/img/action.jpg" class="card-img-top" alt="">
             <div class="card-body">
               <p class="card-text h1">Adjective</p>
@@ -88,7 +85,7 @@
           </a>
         </div>      
         <div class="col-lg-auto col-md-auto my-5 p-0">
-          <a class="card mx-md-auto border-0" href="#">
+          <a class="card mx-md-auto border-0" href="index2.html">
             <img src="../src/img/cat.jpg" class="card-img-top" alt="">
             <div class="card-body">
               <p class="card-text h1">Animal (set A)</p>
@@ -96,7 +93,7 @@
           </a>
         </div>
         <div class="col-lg-auto col-md-auto my-5 p-0">
-          <a class="card mx-md-auto border-0" href="#">
+          <a class="card mx-md-auto border-0" href="index2.html">
             <img src="../src/img/bird.jpg" class="card-img-top" alt="">
             <div class="card-body">
               <p class="card-text h1">Animal (set B)</p>
@@ -104,7 +101,7 @@
           </a>
         </div>
         <div class="col-lg col-md-auto my-5 p-0">
-          <a class="card mx-md-auto mx-lg-auto border-0" href="#">
+          <a class="card mx-md-auto mx-lg-auto border-0" href="index2.html">
             <img src="../src/img/blouse.jpg" class="card-img-top" alt="">
             <div class="card-body">
               <p class="card-text h1">Clothes</p>
@@ -112,7 +109,7 @@
           </a>
         </div>
         <div class="col-lg col-md-auto my-5 p-0">
-          <a class="card mx-md-auto mx-lg-auto border-0" href="#">
+          <a class="card mx-md-auto mx-lg-auto border-0" href="index2.html">
             <img src="../src/img/smile.jpg" class="card-img-top" alt="">
             <div class="card-body">
               <p class="card-text h1">Emotion</p>
