--- a/src/index2.html
+++ b/src/index2.html
@@ -5,8 +5,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <title>Hello !</title>
-<!--     <link href="https://fonts.googleapis.com/css2?family=Roboto:wght@300;400;500;700&display=swap" rel="stylesheet">
- -->    <link rel="stylesheet" href="style.css" />
+    <link rel="stylesheet" href="style.css" />   
 </head>
 
 <body> 
@@ -20,16 +19,16 @@
     <!-- <div class="container">  -->
       <!-- <div class="navbar p-0 mx-auto"> -->
          
-        <div class="container"> 
+        <div class="container nav-container"> 
           <nav class="nav-panel">
-            <a class="nav-link active" href="#">Main Page</a>
-            <a class="nav-link" href="#">Action (set A)</a>
-            <a class="nav-link" href="#">Action (set B)</a>
-            <a class="nav-link" href="#">Adjective</a>
-            <a class="nav-link" href="#">Animal (set A)</a>
-            <a class="nav-link" href="#">Animal (set B)</a>
-            <a class="nav-link" href="#">Clothes</a>
-            <a class="nav-link disabled" href="#">Emotions</a>
+            <a class="nav-link active" href="index.html">Main Page</a>
+            <a class="nav-link" href="index2.html" onclick="localStorage.pageName = 1">Action (set A)</a>
+            <a class="nav-link" href="index2.html" onclick="localStorage.pageName = 2">Action (set B)</a>
+            <a class="nav-link" href="index2.html" onclick="localStorage.pageName = 3">Adjective</a>
+            <a class="nav-link" href="index2.html" onclick="localStorage.pageName = 4">Animal (set A)</a>
+            <a class="nav-link" href="index2.html" onclick="localStorage.pageName = 5">Animal (set B)</a>
+            <a class="nav-link" href="index2.html" onclick="localStorage.pageName = 6">Clothes</a>
+            <a class="nav-link disabled" href="index2.html" onclick="localStorage.pageName = 7">Emotions</a>
           </nav>  
           <div class="row justify-content-between">
             <div class="col-auto p-0 align-self-center">        
