--- a/src/index.html
+++ b/src/index.html
@@ -5,8 +5,11 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1">
     <title>Hello !</title>
-<!--     <link href="https://fonts.googleapis.com/css2?family=Roboto:wght@300;400;500;700&display=swap" rel="stylesheet">
- -->    <link rel="stylesheet" href="style.css" />
+    <script>
+      localStorage.pageIndex = 0;
+      localStorage.trainPlayFlagChecked = false;
+    </script>
+    <link rel="stylesheet" href="style.css"/>
 </head>
 
 <body> 
@@ -16,19 +19,19 @@
       <!-- <div class="navbar p-0 mx-auto"> -->
         <div class="container nav-container">
           <nav class="nav-panel">
-            <a class="nav-link active" href="index.html">Main Page</a>
-            <a class="nav-link" href="index2.html" onclick="localStorage.pageName = 1">Action (set A)</a>
-            <a class="nav-link" href="index2.html" onclick="localStorage.pageName = 2">Action (set B)</a>
-            <a class="nav-link" href="index2.html" onclick="localStorage.pageName = 3">Adjective</a>
-            <a class="nav-link" href="index2.html" onclick="localStorage.pageName = 4">Animal (set A)</a>
-            <a class="nav-link" href="index2.html" onclick="localStorage.pageName = 5">Animal (set B)</a>
-            <a class="nav-link" href="index2.html" onclick="localStorage.pageName = 6">Clothes</a>
-            <a class="nav-link disabled" href="index2.html" onclick="localStorage.pageName = 7">Emotions</a>
+            <a class="nav-link" href="index.html">Main Page</a>
+            <a class="nav-link" href="index2.html" onclick="localStorage.pageIndex = 1">Action (set A)</a>
+            <a class="nav-link" href="index2.html" onclick="localStorage.pageIndex = 2">Action (set B)</a>
+            <a class="nav-link" href="index2.html" onclick="localStorage.pageIndex = 3">Adjective</a>
+            <a class="nav-link" href="index2.html" onclick="localStorage.pageIndex = 4">Animal (set A)</a>
+            <a class="nav-link" href="index2.html" onclick="localStorage.pageIndex = 5">Animal (set B)</a>
+            <a class="nav-link" href="index2.html" onclick="localStorage.pageIndex = 6">Clothes</a>
+            <a class="nav-link" href="index2.html" onclick="localStorage.pageIndex = 7">Emotions</a>
           </nav>  
           <div class="row justify-content-between">
             <div class="col-auto p-0 align-self-center">        
               <div class="menuToggle">
-                <input type="checkbox">
+                <input type="checkbox" id="burger">
                 <span></span>
                 <span></span>
                 <span></span>
@@ -38,7 +41,7 @@
             <div class="col-auto p-0 align-self-center"> 
               <div class="button-cover">
                 <div class="button b2" id="button-10">
-                  <input type="checkbox" class="checkbox">
+                  <input type="checkbox" class="checkbox" id="swich">
                   <div class="knobs">
                     <span>TRAIN</span>
                   </div>
@@ -50,10 +53,10 @@
         </div>
   </header>
   <div class="main">
-    <div class="container">
+    <div class="container card-container">
       <div class="row justify-content-between"> 
         <div class="col-lg-auto col-md-auto my-5 p-0">
-          <a class="card mx-md-auto border-0" href="index2.html">
+          <a class="card mx-md-auto border-0" href="index2.html" onclick="localStorage.pageIndex = 1">
             <img src="../src/img/dance.jpg" class="card-img-top" alt="">
             <div class="card-body">
               <p class="card-text h1">Action (set A)</p>
@@ -61,7 +64,7 @@
           </a>
         </div>
         <div class="col-lg-auto col-md-auto my-5 p-0">  
-          <a class="card mx-md-auto border-0" href="index2.html">
+          <a class="card mx-md-auto border-0" href="index2.html" onclick="localStorage.pageIndex = 2">
             <img src="../src/img/swim.jpg" class="card-img-top" alt="">
             <div class="card-body">
               <p class="card-text h1">Action (set B)</p>
@@ -69,7 +72,7 @@
           </a>
         </div>
         <div class="col-lg-auto col-md-auto my-5 p-0"> 
-          <a class="card mx-md-auto border-0" href="index2.html">
+          <a class="card mx-md-auto border-0" href="index2.html" onclick="localStorage.pageIndex = 3">
             <img src="../src/img/dogEndKids.jpg" class="card-img-top" alt="">
             <div class="card-body">
               <p class="card-text h1">Action (set C)</p>
@@ -77,7 +80,7 @@
           </a>
         </div>        
         <div class="col-lg-auto col-md-auto my-5 p-0"> 
-          <a class="card mx-md-auto border-0" href="index2.html">
+          <a class="card mx-md-auto border-0" href="index2.html" onclick="localStorage.pageIndex = 4">
             <img src="../src/img/action.jpg" class="card-img-top" alt="">
             <div class="card-body">
               <p class="card-text h1">Adjective</p>
@@ -85,7 +88,7 @@
           </a>
         </div>      
         <div class="col-lg-auto col-md-auto my-5 p-0">
-          <a class="card mx-md-auto border-0" href="index2.html">
+          <a class="card mx-md-auto border-0" href="index2.html" onclick="localStorage.pageIndex = 5">
             <img src="../src/img/cat.jpg" class="card-img-top" alt="">
             <div class="card-body">
               <p class="card-text h1">Animal (set A)</p>
@@ -93,7 +96,7 @@
           </a>
         </div>
         <div class="col-lg-auto col-md-auto my-5 p-0">
-          <a class="card mx-md-auto border-0" href="index2.html">
+          <a class="card mx-md-auto border-0" href="index2.html" onclick="localStorage.pageIndex = 6">
             <img src="../src/img/bird.jpg" class="card-img-top" alt="">
             <div class="card-body">
               <p class="card-text h1">Animal (set B)</p>
@@ -101,7 +104,7 @@
           </a>
         </div>
         <div class="col-lg col-md-auto my-5 p-0">
-          <a class="card mx-md-auto mx-lg-auto border-0" href="index2.html">
+          <a class="card mx-md-auto mx-lg-auto border-0" href="index2.html" onclick="localStorage.pageIndex = 7">
             <img src="../src/img/blouse.jpg" class="card-img-top" alt="">
             <div class="card-body">
               <p class="card-text h1">Clothes</p>
@@ -109,7 +112,7 @@
           </a>
         </div>
         <div class="col-lg col-md-auto my-5 p-0">
-          <a class="card mx-md-auto mx-lg-auto border-0" href="index2.html">
+          <a class="card mx-md-auto mx-lg-auto border-0" href="index2.html" onclick="localStorage.pageIndex = 8">
             <img src="../src/img/smile.jpg" class="card-img-top" alt="">
             <div class="card-body">
               <p class="card-text h1">Emotion</p>
