--- a/src/index2.html
+++ b/src/index2.html
@@ -5,6 +5,9 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <title>Hello !</title>
+    <script>
+      localStorage.audioIsOn = true;
+    </script>
     <link rel="stylesheet" href="style.css" />   
 </head>
 
@@ -58,33 +61,33 @@
     <div class="container card-container">
       <div class="row justify-content-between"> 
         <div class="col-lg-auto col-md-auto my-5 p-0">
-          <div class="card card_set mx-md-auto border-0" href="#"></div>         
+          <div class="card card_set mx-md-auto border-0"></div>         
         </div>
         <div class="col-lg-auto col-md-auto my-5 p-0">  
-          <div class="card card_set mx-md-auto border-0" href="#"></div>
+          <div class="card card_set mx-md-auto border-0"></div>
         </div>
         <div class="col-lg-auto col-md-auto my-5 p-0"> 
-          <div class="card card_set mx-md-auto border-0" href="#"></div>
+          <div class="card card_set mx-md-auto border-0"></div>
         </div>        
         <div class="col-lg-auto col-md-auto my-5 p-0"> 
-          <div class="card card_set mx-md-auto border-0" href="#"></div>
+          <div class="card card_set mx-md-auto border-0"></div>
         </div>      
         <div class="col-lg-auto col-md-auto my-5 p-0">
-          <div class="card card_set mx-md-auto border-0" href="#"></div>
+          <div class="card card_set mx-md-auto border-0"></div>
         </div>
         <div class="col-lg-auto col-md-auto my-5 p-0">
-          <div class="card card_set mx-md-auto border-0" href="#"></div>
+          <div class="card card_set mx-md-auto border-0"></div>
         </div>
         <div class="col-lg col-md-auto my-5 p-0">
-          <div class="card card_set mx-md-auto mx-lg-auto border-0" href="#"></div>
+          <div class="card card_set mx-md-auto mx-lg-auto border-0"></div>
         </div>
         <div class="col-lg col-md-auto my-5 p-0">
-          <div class="card card_set mx-md-auto mx-lg-auto border-0" href="#"></div> 
+          <div class="card card_set mx-md-auto mx-lg-auto border-0"></div> 
         </div>
       </div>
     </div> 
     <div class="container">      
-      <button type="button" class="btn btn-warning btn-lg btn-block">Start game</button>
+      <button type="button" class="btn btn-warning btn-lg btn-block" id="start-button">Start game</button>
       </div>
     </div>  
   </div>  
