feat: rotate cards + set cards on play mode

--- a/src/index.html
+++ b/src/index.html
@@ -65,7 +65,7 @@
           </a>
         </div>
         <div class="col-lg-auto col-md-auto my-5 p-0">  
-          <a class="card mx-md-auto border-0" href="#" onclick="localStorage.pageIndex = 2">
+          <a class="card mx-md-auto border-0" href="index2.html" onclick="localStorage.pageIndex = 2">
             <img src="../src/img/swim.jpg" class="card-img-top" alt="">
             <div class="card-body">
               <p class="card-text h1">Action (set B)</p>
