--- a/src/index2.html
+++ b/src/index2.html
@@ -46,7 +46,7 @@
             <div class="col-auto p-0 align-self-center"> 
               <div class="button-cover">
                 <div class="button b2" id="button-10">
-                  <input type="checkbox" class="checkbox" id="swich" checked>
+                  <input type="checkbox" class="checkbox" id="swich">
                   <div class="knobs">
                     <span>TRAIN</span>
                   </div>
@@ -58,6 +58,7 @@
         </div>
   </header>
   <div class="main">
+    <div class="container star-container"></div>
     <div class="container card-container">
       <div class="row justify-content-between"> 
         <div class="col-lg-auto col-md-auto my-5 p-0">
