feat: play mode ask audio

--- a/src/index2.html
+++ b/src/index2.html
@@ -58,7 +58,10 @@
         </div>
   </header>
   <div class="main">
-    <div class="container star-container"></div>
+    <div class="container star-container">
+      <div class="star"></div>
+      <div class="pop_up"></div>
+    </div>
     <div class="container card-container">
       <div class="row justify-content-between"> 
         <div class="col-lg-auto col-md-auto my-5 p-0">
