feat: score stars + app action after win

--- a/src/index.html
+++ b/src/index.html
@@ -20,7 +20,7 @@
       <!-- <div class="navbar p-0 mx-auto"> -->
         <div class="container nav-container">
           <nav class="nav-panel">
-            <a class="nav-link" href="index.html">Main Page</a>
+            <a class="nav-link" href="index.html" onclick="localStorage.pageIndex = 0">Main Page</a>
             <a class="nav-link" href="index2.html" onclick="localStorage.pageIndex = 1">Action (set A)</a>
             <a class="nav-link" href="index2.html" onclick="localStorage.pageIndex = 2">Action (set B)</a>
             <a class="nav-link" href="index2.html" onclick="localStorage.pageIndex = 3">Adjective</a>
