--- a/src/index2.html
+++ b/src/index2.html
@@ -24,7 +24,7 @@
          
         <div class="container nav-container"> 
           <nav class="nav-panel">
-            <a class="nav-link" href="index.html">Main Page</a>
+            <a class="nav-link" href="index.html" onclick="localStorage.pageIndex = 0">Main Page</a>
             <a class="nav-link" href="index2.html" onclick="localStorage.pageIndex = 1">Action (set A)</a>
             <a class="nav-link" href="index2.html" onclick="localStorage.pageIndex = 2">Action (set B)</a>
             <a class="nav-link" href="index2.html" onclick="localStorage.pageIndex = 3">Adjective</a>
@@ -58,8 +58,8 @@
         </div>
   </header>
   <div class="main">
-    <div class="container star-container">
-      <div class="star"></div>
+    <div class="container">
+      <div class="star-container"></div>
       <div class="pop_up"></div>
     </div>
     <div class="container card-container">
