feat: add statics page + new mp3 + error points

--- a/src/index2.html
+++ b/src/index2.html
@@ -27,11 +27,13 @@
             <a class="nav-link" href="index.html" onclick="localStorage.pageIndex = 0">Main Page</a>
             <a class="nav-link" href="index2.html" onclick="localStorage.pageIndex = 1">Action (set A)</a>
             <a class="nav-link" href="index2.html" onclick="localStorage.pageIndex = 2">Action (set B)</a>
-            <a class="nav-link" href="index2.html" onclick="localStorage.pageIndex = 3">Adjective</a>
-            <a class="nav-link" href="index2.html" onclick="localStorage.pageIndex = 4">Animal (set A)</a>
-            <a class="nav-link" href="index2.html" onclick="localStorage.pageIndex = 5">Animal (set B)</a>
-            <a class="nav-link" href="index2.html" onclick="localStorage.pageIndex = 6">Clothes</a>
-            <a class="nav-link" href="index2.html" onclick="localStorage.pageIndex = 7">Emotions</a>
+            <a class="nav-link" href="index2.html" onclick="localStorage.pageIndex = 3">Action (set C)</a>
+            <a class="nav-link" href="index2.html" onclick="localStorage.pageIndex = 4">Adjective</a>
+            <a class="nav-link" href="index2.html" onclick="localStorage.pageIndex = 5">Animal (set A)</a>
+            <a class="nav-link" href="index2.html" onclick="localStorage.pageIndex = 6">Animal (set B)</a>
+            <a class="nav-link" href="index2.html" onclick="localStorage.pageIndex = 7">Clothes</a>
+            <a class="nav-link" href="index2.html" onclick="localStorage.pageIndex = 8">Emotions</a>
+            <a class="nav-link" href="index3.html" onclick="localStorage.pageIndex = 9">Statistics</a>
           </nav>  
           <div class="row justify-content-between">
             <div class="col-auto p-0 align-self-center">        
@@ -60,7 +62,9 @@
   <div class="main">
     <div class="container">
       <div class="star-container"></div>
-      <div class="pop_up"></div>
+      <div class="pop_up">
+        <div class="pop_up_score"></div>
+      </div>
     </div>
     <div class="container card-container">
       <div class="row justify-content-between"> 
